2002-07-17  Akim Demaille  <akim@epita.fr>

	* tests/wrapsh.as, tests/wrappl.as: Merge into...
	* tests/wrapper.as: this.
	* tests/Makefile.am, configure.ac: Adjust.

2002-07-17  Mark D. Roth  <roth@feep.net>

	* configure.ac: Add --enable-site-macro-dir option.
	* bin/Makefile.am: Expand @SITE_MACRO_DIR@.
	* bin/autom4te.in: Add --prepend-include, --include-envvar, and
	--site-macro-subdir options.
	* bin/autoconf.in: Add --prepend-include option.
	* bin/autoheader.in: Add --prepend-include option.
	* bin/autoreconf.in: Add --prepend-include option.
	* bin/autoscan.in: Add --prepend-include option.
	* bin/autoupdate.in: Add --prepend-include option.
	* doc/autoconf.texi: Document use of $AC_MACRO_PATH and site
	macro directory, remove note that include path directories are
	used in reverse order, and document --prepend-include option.
	* lib/autom4te.in: Use --prepend-include instead of --include.
	* tests/wrapsh.in: Use --prepend-include instead of --include.

2002-07-17  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_PACKAGE): `_' is allowed in
	tarnames.
	* doc/autoconf.texi (Initializing configure): Adjust.

2002-07-17  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_REALLOC, _AC_FUNC_REALLOC)
	(_AC_FUNC_MALLOC): New.
	(AC_FUNC_MALLOC): Use the latter.
	Define HAVE_MALLOC to 0 if broken.
	* doc/autoconf.texi (Particular Functions): Adjust.

2002-07-16  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/c.m4 (AC_C_BACKSLASH_A): New.
	* doc/autoconf.texi (C Compiler): Adjust.

2002-07-09  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Properly set the ``header'' part.

2002-07-09  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Systemology): Some about Darwin.

2002-07-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/autoconf/specific.m4 (AC_CYGWIN, AC_EMXOS2, AC_MINGW32):
	Don't use AC_REQUIRE in AU_DEFUN.

2002-07-09  Art Haas  <ahaas@neosoft.com>
